# MeteoCore

./: .gitignore  CMakeLists.txt  README.md  prj.conf  zephyr-env.cmd
ESP32_Configuration/: ESP_32_Configuration.ino  Esempio.ino
ESP32_Configuration/ESP_32_Configuration/: ESP_32_Configuration.ino
ESP_32_Configuration/: ESP_32_Configuration.ino
Server/: server.js
Test main/: Dockerfile  spin-commands.md  test_main.pml
ThingSpeak_Configuration/: thingspeak.ino
Utils/Server/: server.js
boards/: nucleo_f446re.overlay
dataset/: README.md  cleaned_dataset.csv
esp32_weather_station/: CMakeLists.txt  prj.conf  zephyr-config.cmd
esp32_weather_station/boards/: esp32.overlay  esp32_devkitc_wroom.overlay
esp32_weather_station/src/: main.c
esp32_zephyr_attempt/: CMakeLists.txt  prj.conf
esp32_zephyr_attempt/boards/: esp32.overlay
esp32_zephyr_attempt/src/: main.c
ml/: eda.py  export_tree_to_c.py  model.joblib  model_info.txt  preprocess_dataset.py  rain_model.c  rain_model.h  rebalancing.py  train_model.py
ml/outputs/: classification_report.txt  model_info.txt
src/: bme280.c  bme280.h  decision_tree.c  esp32_comm.c  esp32_comm.h  main.c  ml_model.c  ml_model.h  rain_model.h
src/boards/: nucleo_f446re.overlay
thingspeak/: thingspeak.ino
